// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders ./src/affix/demo/basic.vue correctly 1`] = `
"<div data-measure-status="0">
  <!---->
  <div class="css-dev-only-do-not-override-1p3hq3p"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Affix top</span></button></div>
</div>
<br>
<div data-measure-status="0">
  <!---->
  <div class="css-dev-only-do-not-override-1p3hq3p"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Affix bottom</span></button></div>
</div>"
`;

exports[`renders ./src/affix/demo/on-change.vue correctly 1`] = `
"<div data-measure-status="0">
  <!---->
  <div class="css-dev-only-do-not-override-1p3hq3p"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default" type="button"><span style="display: contents;"><!----></span><span>120px to affix top</span></button></div>
</div>"
`;

exports[`renders ./src/affix/demo/target.vue correctly 1`] = `
"<div data-v-4627a789="" id="components-affix-demo-target" class="scrollable-container">
  <div data-v-4627a789="" class="background">
    <div data-v-4627a789="" data-measure-status="0">
      <!---->
      <div class="css-dev-only-do-not-override-1p3hq3p"><button data-v-4627a789="" class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Fixed at the top of container</span></button></div>
    </div>
  </div>
</div>"
`;
